[package]
name = "remotetool"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24.7"
teloxide = "0.12.2"
tokio = { version = "1.32.0", features = ["full"] }
win-screenshot = "4.0.5"

[dependencies.nokhwa]
version = "0.10.4"
# Use the native input backends, enable WGPU integration
features = ["input-native", "output-wgpu"]
